--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -8,5 +8,11 @@
 </head>
 <body>
 <h1>Welcome to the Home Page!</h1>
+<div>
+
+    <a href="/tabulated-function">"Tabulated_func"</a>
+
+</div>
+
 </body>
 </html>
