--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-array.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-array.html
@@ -54,7 +54,7 @@
 <h1>Создание табулированной функции</h1>
 
 <!-- Форма для ввода количества точек -->
-<form action="/tabulated-function/generate" method="post">
+<form action="/tabulated-function-array/generate" method="post">
     <label for="pointCount">Количество точек:</label>
     <input type="number" id="pointCount" name="pointCount" min="1" required>
     <button type="submit">Сгенерировать таблицу</button>
@@ -63,7 +63,7 @@
 <hr> <!--ЧЕРТА-->
 
 <!-- Таблица для ввода значений x и y -->
-<form action="/tabulated-function/create" method="post" th:if="${pointCount > 0}">
+<form action="/tabulated-function-array/create" method="post" th:if="${pointCount > 0}">
     <input type = "hidden" name = "currentPage" value = "/tabulated-function/create">
     <table border="1">
         <thead>
@@ -93,7 +93,7 @@
     <div class="modal">
         <h2>Успех!</h2>
         <p th:text="${success}">Функция успешно создана!</p>
-        <form action="/tabulated-function" method="get">
+        <form action="/tabulated-function-array" method="get">
             <button type="submit">Ок</button>
         </form>
     </div>
@@ -104,7 +104,7 @@
     <div style="background: white; padding: 20px; border-radius: 5px; width: 50%; text-align: center;">
         <h1 th:text="${errorTitle}"></h1>
         <p th:text="${errorMessage}"></p>
-        <form action="/tabulated-function" method="get">
+        <form action="/tabulated-function-array" method="get">
             <button type="submit">Ок</button>
         </form>
     </div>
