Add Operations Controller and others

--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Главное меню</h1>
 <ul>
-    <li><a href="/settings" target="_self">Настройки фабрики</a></li>
     <li><a href="/tabulated-function-array" target="_self">Создать табулированную функцию</a></li>
     <li><a href="/tabulated-function-mathfunc" target="_self">Другая функция</a></li>
+    <li><a href="/tabulated-operations">Операции</a></li>
 </ul>
 
 <dialog id="settingsModal">
