--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-mathfunc.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-mathfunc.html
@@ -53,7 +53,7 @@
 </head>
 <body>
 <h2>Создание табулированной функции</h2>
-
+<p th:text=" 'Текущая фабрика - ' + ${factory}"></p>
 <form action="/tabulated-function-mathfunc/create" method="post">
   <label for="function">Выберите функцию:</label><br>
   <select id="function" name="function">
