--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-array.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-function-array.html
@@ -51,7 +51,9 @@
     </style>
 </head>
 <body>
+
 <h1>Создание табулированной функции</h1>
+<p th:text=" 'Текущая фабрика - ' + ${factory}"></p>
 
 <!-- Форма для ввода количества точек -->
 <form action="/tabulated-function-array/generate" method="post">
@@ -60,11 +62,10 @@
     <button type="submit">Сгенерировать таблицу</button>
 </form>
 
-<hr> <!--ЧЕРТА-->
+<hr>
 
 <!-- Таблица для ввода значений x и y -->
 <form action="/tabulated-function-array/create" method="post" th:if="${pointCount > 0}">
-    <input type = "hidden" name = "currentPage" value = "/tabulated-function/create">
     <table border="1">
         <thead>
         <tr>
@@ -87,8 +88,8 @@
 
     <button type="submit">Создать</button>
 </form>
-</body>
-<!-- Модальное окно усепеха -->
+
+<!-- Модальное окно успеха -->
 <div class="modal-overlay" th:classappend="${showModal} ? 'active'">
     <div class="modal">
         <h2>Успех!</h2>
@@ -98,7 +99,8 @@
         </form>
     </div>
 </div>
-<!-- Модальное окно  Ошибки -->
+
+<!-- Модальное окно ошибки -->
 <div th:if="${errorMessage}"
      style="background-color: rgba(0, 0, 0, 0.5); position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
     <div style="background: white; padding: 20px; border-radius: 5px; width: 50%; text-align: center;">
@@ -109,4 +111,6 @@
         </form>
     </div>
 </div>
+
+</body>
 </html>
