--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createFormMathFunc.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createFormMathFunc.html
@@ -1,4 +1,5 @@
 <input type="hidden" name="redirectTarget" th:value="${redirectTarget}">
+<input type="hidden" name="target" th:value="${target}">
 <h2>Создание табулированной функции</h2>
 <p th:text=" 'Текущая фабрика - ' + ${factory}"></p>
 
