--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
@@ -1,6 +1,7 @@
 <div>
     <form action="/tabulated-operations/createFunction" method="post">
         <input type="hidden" name="target" th:value="${target}">
+        <input type="hidden" name="redirectTarget" th:value="${redirectTarget}">
         <table>
             <tr>
                 <th>X</th>
