--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -77,7 +77,7 @@
     <div th:if="${operand1Func == null}">
         <p>Отсутствует функция</p>
     </div>
-    <button onclick="openModal('operand1')">Создать функцию</button>
+    <button onclick="openModal('operand1','tabulated-operations')">Создать функцию</button>
     <button onclick="openSave('operand1')">Сохранить</button>
     <button onclick="openFunctionList('operand1')">Загрузить</button>
     <button onclick="openAnother('tabulated-operations','operand1')">Открыть</button>
