--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/static/css/login.css
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/static/css/login.css
@@ -5,32 +5,35 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Tahoma, sans-serif;
 }
 
 .login-container {
+    position: relative;
     background-color: #2e2e2e;
-    padding: 20px 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    padding: 30px 40px;
+    border-radius: 20px;
     color: #d9ff6b;
     text-align: center;
-    width: 300px;
+    width: 450px;
+    height: 290px;
 }
 
 .login-container h1 {
-    font-size: 18px;
-    margin-bottom: 20px;
+    font-size: 24px;
+    margin-bottom: 30px;
 }
 
 .login-container input[type="text"],
 .login-container input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
+    width: 80%;
+    padding: 15px 15px;
+    margin-bottom: 15px;
+    margin-right: 0px;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: #f0ffd4;
+    font-weight: normal;
     font-size: 14px;
 }
 
@@ -39,25 +42,36 @@ body {
     text-align: left;
     margin-bottom: 5px;
     color: #d9ff6b;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .login-container a {
     display: block;
-    margin-top: 10px;
-    font-size: 12px;
-    color: #d9ff6b;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 500;
+    cursor: pointer;
     text-decoration: none;
 }
 
+.login-container a:hover {
+    text-decoration: underline;
+}
+
 .login-container button {
-    margin-top: 15px;
-    width: 100%;
+    margin-top: 10px;
+    position: static; /* Абсолютное позиционирование */
+    width: 150px;
+    height: 45px;
+    text-align: center;
     padding: 10px;
     background-color: #d9ff6b;
     border: none;
-    border-radius: 5px;
-    font-size: 14px;
+    border-radius: 20px;
+    font-family: Tahoma, sans-serif;
+    font-size: 16px;
     font-weight: bold;
     color: #2e2e2e;
     cursor: pointer;
