--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/createForm.html
@@ -12,6 +12,7 @@
 <div >
   <form onsubmit="submitForm(event)">
     <input type="hidden" name="target" th:value="${target}">
+    <input type="hidden" name="redirectTarget" th:value="${redirectTarget}">
     <label for="points">Количество точек:</label>
     <input type="number" name="points" id="points" required>
     <button type="submit">Сгенерировать таблицу</button>
