--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
@@ -1,6 +1,7 @@
 <div id="errorForm" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid black;">
     <div id="errorContent"></div>
-    <p id="errorMessage">Ошибка</p>
+    <p>Ошибка</p>
+    <p id="errorMessage"></p>
     <p th:text="${errorMessage}"></p>
     <button onclick="closeModal()">Закрыть</button>
 </div>
