--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -9,11 +9,11 @@
 <h1>Главное меню</h1>
 <ul>
     <li><a href="/tabulated-operations">Простейшие операции над функциями</a></li>
-    <li><a href="#"></a>Дифференцирование функций</li>
-    <li><a href="#"></a>Высчитать интеграл</li>
-    <li><a href="#"></a>График</li>
-    <li><a href="#"></a>Создание сложной функции</li>
-    <li><a href="#"></a>Настройки фабрики</li>
+    <li><a href="/differential-operation">Дифференцирование функций</a></li>
+    <li><a href="#">Высчитать интеграл</a></li>
+    <li><a href="#">График</a></li>
+    <li><a href="#">Создание сложной функции</a></li>
+    <li><a href="#">Настройки фабрики</a></li>
 </ul>
 
 <dialog id="settingsModal">
