--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
@@ -1,17 +1,19 @@
 <div>
-    <form action="/tabulated-operations/createFunction" method="post">
-        <input type="hidden" name="target" th:value="${target}">
-        <input type="hidden" name="redirectTarget" th:value="${redirectTarget}">
+    <form id="createFunctionForm">
+        <input type="hidden" name="target" th:value="${target}" id="targetField">
+        <input type="hidden" name="redirectTarget" th:value="${redirectTarget}" id="redirectTargetField">
+        <p th:text="${target}"></p>
         <table>
             <tr>
                 <th>X</th>
                 <th>Y</th>
             </tr>
             <tr th:each="i : ${#numbers.sequence(1, points)}">
-                <td><input type="number" name="x" step="0.01"  /></td>
+                <td><input type="number" name="x" step="0.01" /></td>
                 <td><input type="number" name="y" step="0.01"/></td>
             </tr>
         </table>
-        <button type="submit">Создать пупу</button>
+        <button onclick="create()">Создать пупу</button>
     </form>
 </div>
+
